Handle ModifyThing command in FeaturePlaceholder
Signed-off-by: Yannic Klem <Yannic.Klem@bosch.io>